--- a/src/views/partials/footer-scripts.pug
+++ b/src/views/partials/footer-scripts.pug
@@ -22,3 +22,12 @@ script.
   var url ='images/icons.svg';
   var c=new XMLHttpRequest(); c.open('GET', url, false); c.setRequestHeader('Content-Type', 'text/xml'); c.send();
   document.body.insertBefore(c.responseXML.firstChild, document.body.firstChild)
+
+  document.getElementById("signUp").addEventListener("click", function (event) {
+      event.preventDefault()
+      var email = document.getElementById('email').value;
+      console.log(email)
+      firebase.database().ref('earlyAccess').push({email: email}, function (event) {
+          console.log(event)
+      })
+  });
