Adding Firebase functions

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,8 +8,14 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,p,blockquote,hr,t
 }
 
 
-
-
+.success {
+    background-color: #FF9800;
+    border-radius: 25px;
+    margin-top: 15px;
+}
+#hide {
+    display: none;
+}
 
 /*######################################*/
 /*TYPOGRAPHY ###########################*/
