--- a/src/views/partials/section-footer.pug
+++ b/src/views/partials/section-footer.pug
@@ -8,6 +8,9 @@ section#footer
         h2 Sign up for Early Access
         p
           | Be the first in line to try storpug, the easy self storage management software.
+        h3.success#hide
+          | Thank you for signing up for the storpug early access!
+
         #newsletter_form
           form#subscribe-form.subscribe-form()
             input.subscribe-input(type='email', name='email', id='email', placeholder='Enter your e-mail address...', required='')
